JumpScript/tests/baselines/reference/numericIndexerConstraint1.errors.txt
tests/cases/compiler/numericIndexerConstraint1.jump(3,5): error TS2322: Type 'number' is not assignable to type 'Foo'.


==== tests/cases/compiler/numericIndexerConstraint1.jump (1 errors) ====
    class Foo { foo() { } }
    var x: { [index: string]: number; };
    var result: Foo = x["one"]; // error
        ~~~~~~
!!! error TS2322: Type 'number' is not assignable to type 'Foo'.
    